--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -1,4 +1,5 @@
 @import "sidebar";
+
 * {
   margin: 0;
   padding: 0;
@@ -97,4 +98,25 @@ div:focus {
 
 .el-submenu__title {
   font-size: 18px !important;
+}
+
+.el-tabs__item:hover {
+  color: rgb(128, 30, 31) !important;
+}
+
+.el-tabs__item.is-active {
+  color: rgb(128, 30, 31) !important;
+}
+
+.el-tabs__active-bar {
+  background-color: rgb(128, 30, 31) !important;
+}
+
+.el-input.is-active .el-input__inner, .el-input__inner:focus {
+  border-color: rgb(128, 30, 31) !important;
+}
+
+
+.app-container {
+  padding: 20px;
 }
